Fixed Scrolling on iOS
Added code to stop scrolling when the menu was open.

https://benfrain.com/preventing-body-scroll-for-modals-in-ios/

--- a/dest/styles.css
+++ b/dest/styles.css
@@ -497,7 +497,7 @@ nav ul {
     transition-delay: 0.6s;*/
 nav ul li {
   font-size: 2.5rem;
-  padding: 16px 4px;
+  padding: 16px 0;
   text-align: center
 }
 nav a {
@@ -511,7 +511,13 @@ nav a:hover {
 @media screen and (min-width: 1025px) {
   nav ul li {
     font-size: 4rem;
-    padding: 40px 5px;
+    padding: 32px 0;
+  }
+      }
+@media screen and (min-width: 1681px) {
+  nav ul li {
+    font-size: 4rem;
+    padding: 40px 0;
   }
       }
 .c-wrapper {
